Fixed IE layout issue

--- a/less/styles.less
+++ b/less/styles.less
@@ -73,6 +73,7 @@ main {
         width: auto;
       }
       width: 100%;
+      height: 100%;
       max-width: 100%;
     }
     a {
@@ -101,7 +102,7 @@ main {
     width: 100vw;
 
     @media (min-width: 900px) {
-      width: 49.5vw;
+      width: 50vw;
     }
   }
 }
@@ -114,9 +115,9 @@ main {
   }
   .section-home-dt.column {
     & {
-      flex: 1;
       width: 100%;
       @media (min-width: 900px) {
+        flex: 1;
         &:first-child {
           margin-right: 40px;
         }
